# Optrand-PVSS

./: Cargo.toml  README.md
src/: lib.rs
src/modified_scrape/: aggregator.rs  config.rs  dealer.rs  decomp.rs  decryption.rs  errors.rs  mod.rs  node.rs  participant.rs  poly.rs  pvss.rs  share.rs  srs.rs
src/nizk/: mod.rs
src/nizk/dleq/: mod.rs  srs.rs
src/nizk/dlk/: mod.rs  srs.rs
src/nizk/scheme/: mod.rs
src/nizk/utils/: errors.rs  hash.rs  mod.rs
src/signature/: mod.rs
src/signature/scheme/: mod.rs
src/signature/schnorr/: mod.rs  srs.rs
src/signature/utils/: errors.rs  hash.rs
